--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <link rel="stylesheet" href="css/styles.css">
 
 <!-- Title -->
-<title>PWA Starter</title>
+<title>PWA</title>
 
 <!-- Aframe -->
 <script src="js/aframe.min.js"></script>  
@@ -51,9 +51,9 @@
 <body>
 
   <a-scene>
-    <a-sky src="img/inferno.jpg" ></a-sky>
+    <a-sky src="/img/Golden Louvre.jpg" ></a-sky>
 
-    <a-text font="kelsonsans" value="The Inferno" width="6" position="-2.5 0.25 -1.5"
+    <a-text font="kelsonsans" value="Golden Louvre" width="6" position="-2.5 0.25 -1.5"
             rotation="0 15 0"></a-text>
   </a-scene>
 
@@ -63,3 +63,4 @@
 
 </body>
 </html>
+
