--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
 
   <a-scene>
-    <a-sky src="/img/Golden Louvre.jpg" ></a-sky>
+    <a-sky src="img/Golden Louvre.jpg" ></a-sky>
 
     <a-text font="kelsonsans" value="Golden Louvre" width="6" position="-2.5 0.25 -1.5"
             rotation="0 15 0"></a-text>
